MakeCatalog: return position of pixel with minimum/maximum value
Until now, we would return positions only based on averaged properties of
the object/clump labels. But in some scenarios, we explicity want the
position of the minimum/maximum value of the object/clump.

With this commit, six new columns have been added to MakeCatalog precisely
for this purpose.

--- a/NEWS
+++ b/NEWS
@@ -41,6 +41,11 @@ See the end of the file for license conditions.
      'astquery' option, to easily search the contents of external databases
      within the image.
 
+  MakeCatalog:
+   - New columns to return the position of pixel with minimum or maximum
+     value: '--minvx', '--maxvx', '--minvy', '--maxvy', '--minvz',
+     '--maxvz'.
+
   Table:
    - New '--noblank' option will remove all rows in output table that have
      atleast one blank value in the specified columns. For example if
