MakeCatalog: new --areahalfsum option
With this new option, it is now possible to see how many pixels constitute
half the total brightness (sum of values) within a labeled region (object
or clump). This can be used to get a zero-th order approximation of the
effective radius for example. But should be used with care on "objects"
(which may have multiple peaks), it is perfect for "clumps" though (which
only have one peak).

This was proposed by Ignacio Trujillo.

This commit completes task #15786.

--- a/NEWS
+++ b/NEWS
@@ -42,6 +42,7 @@ See the end of the file for license conditions.
      within the image.
 
   MakeCatalog:
+   --areahalfsum: area containing half the total flux of object or clump.
    - New columns to return the position of pixel with minimum or maximum
      value: '--minvx', '--maxvx', '--minvy', '--maxvy', '--minvz',
      '--maxvz'.
