MakeCatalog: new columns for fractional radius, area, and SB
With the addition of the previously added '--areahalfsum' option, Ignacio
Trujillo suggested to calculate the approximate radius that corresponds to
the area, so the new '--halfradiusobs' option was added, and to help in
sorting the option names with the output of '--help', the original option
was renamed to '--halfsumarea'. Also, by dividing the flux with the region
and its area, we now have a new '--halfsumsb' option to report the surface
brightness.

But to help in identifying the slope of objects, and in particular stars in
an image, two other options were added for the user to optionally ask for
areas and radii at custom fractions of total flux: '--fracsumarea1',
'--fracsumarea2', '--fracradiusobs1' and '--fracradiusobs2'. The custom
fractions can be set with the newly added '--fracsum' option (which can
take two floating point values).

These columns were suggested by Ignacio Trujillo.

--- a/NEWS
+++ b/NEWS
@@ -42,7 +42,14 @@ See the end of the file for license conditions.
      within the image.
 
   MakeCatalog:
-   --areahalfsum: area containing half the total flux of object or clump.
+   --fracsum: fractions to use in '--fracsumarea1' or '--fracsumarea2'.
+   --fracsumarea1: area of given fraction of the summed object or clump values.
+   --fracsumarea2: area of given fraction of the summed object or clump values.
+   --halfsumsb: Surface brightness within area reported by '--halfsumarea'.
+   --halfsumarea: area containing half of the summed object or clump values.
+   --halfradiusobs: radius derived from '--halfsumarea', underestimates r_e.
+   --fracradiusobs1: similar to --halfradiusobs, but for custom fraction 1.
+   --fracradiusobs2: similar to --halfradiusobs, but for custom fraction 2.
    - New columns to return the position of pixel with minimum or maximum
      value: '--minvx', '--maxvx', '--minvy', '--maxvy', '--minvz',
      '--maxvz'.
